force-app/main/default/objects/FieloCRUD__PageLayout__c/FieloCRUD__PageLayout__c.object-meta.xml
<CustomObject>
    <label>Page Layout</label>
    <nameField>
        <label>Page Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Layouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>