force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__BackActionMenu__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__BackActionMenu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Menu that handles back action through the page layout. Commonly is the menu that contains the list view component which references this page layout.</inlineHelpText>
    <label>Back Action Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Back Actions from Page Layouts</relationshipLabel>
    <relationshipName>PageLayoutBackAction</relationshipName>
    <type>Lookup</type>
</CustomField>