force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__ButtonsAlignment__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ButtonsAlignment__c</fullName>
    <inlineHelpText>Defines buttons alignment within the page layout.</inlineHelpText>
    <label>Buttons Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
                <default>true</default>
                <label>Center</label>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>