force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__ButtonsPlacement__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ButtonsPlacement__c</fullName>
    <inlineHelpText>Defines where buttons will appear, if at the top, at the bottom or in both places.</inlineHelpText>
    <label>Buttons Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>