force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__CSSContent__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__CSSContent__c</fullName>
    <defaultValue>&#39;.greenBkg { background:#dff0d8; padding:10px; margin-bottom:10px; font-size: 14px; color: #468847;}&#39;</defaultValue>
    <label>CSS Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>