force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__Default__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System must always have one default page layout which is going to be used for record creation and in case of a misconfiguration on multi-layout functionality.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>