force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__DeleteActionMenu__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__DeleteActionMenu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Override the delete action by adding a menu that handles record deletion through page layout.</inlineHelpText>
    <label>Delete Action Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Delete Actions from Page Layouts</relationshipLabel>
    <relationshipName>PageLayoutDeleteAction</relationshipName>
    <type>Lookup</type>
</CustomField>