force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__DeletionFrom__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__DeletionFrom__c</fullName>
    <inlineHelpText>Define whether the deletion of the record will be done directly on the page layout, on the delete action menu or if there is no delete action on the page layout.</inlineHelpText>
    <label>Deletion From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Action Menu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>