force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__DontCreateMemberUser__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__DontCreateMemberUser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is for use on the Member object only. If checked (True), when creating a new member record, Fielo won&#39;t automatically create the User record.</inlineHelpText>
    <label>Don&#39;t Create Member User</label>
    <type>Checkbox</type>
</CustomField>