force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__EditActionMenu__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__EditActionMenu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Menu that handles record edition through page layout. Commonly is a menu that contains a CRUD component that references this page layout but it can also be a custom page.</inlineHelpText>
    <label>Edit Action Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Edit Actions from Page Layouts</relationshipLabel>
    <relationshipName>PageLayoutEditAction</relationshipName>
    <type>Lookup</type>
</CustomField>