force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__HideBackButton__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HideBackButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide back button</label>
    <type>Checkbox</type>
</CustomField>