force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__HTMLContent__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HTMLContent__c</fullName>
    <defaultValue>&#39;&lt;p class="greenBkg"&gt;&lt;b&gt;The form was successfully submitted.&lt;/b&gt;&lt;/p&gt;&#39;</defaultValue>
    <inlineHelpText>This HTML content will be displayed if the submission of the form is a success.</inlineHelpText>
    <label>HTML Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>