force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__LabelSaveButton__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelSaveButton__c</fullName>
    <label>Label Save button</label>
    <length>80</length>
    <type>Text</type>
</CustomField>