force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ObjectAPIName__c</fullName>
    <formula>FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object API Name</label>
    <type>Text</type>
</CustomField>