force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__ObjectSettings__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ObjectSettings__c</fullName>
    <label>Object Settings</label>
    <referenceTo>FieloCRUD__ObjectSettings__c</referenceTo>
    <relationshipLabel>Page Layouts</relationshipLabel>
    <relationshipName>PageLayouts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>