force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>