force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__SaveActionMenuOverride__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SaveActionMenuOverride__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Override where a record should redirect after creation. If this field is not completed it will take into account the configuration of the list view that references this page layout.</inlineHelpText>
    <label>Save Action Menu (Override)</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Save Actions from Page Layouts</relationshipLabel>
    <relationshipName>PageLayoutSaveAction</relationshipName>
    <type>Lookup</type>
</CustomField>