force-app/main/default/objects/FieloCRUD__PageLayout__c/fields/FieloCRUD__ValueToDefinePageLayout__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ValueToDefinePageLayout__c</fullName>
    <inlineHelpText>Complete with the value that the field defined in "Field To Define Page Layout" of the related object setting should take in order to display this page layout.</inlineHelpText>
    <label>Value To Define Page Layout</label>
    <length>80</length>
    <type>Text</type>
</CustomField>