force-app/main/default/objects/FieloCRUD__PageLayout__c/recordTypes/FieloCRUD__Form.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__Form</fullName>
    <active>true</active>
    <description>Form page layout is always displayed in editable mode (ex. contact us form).</description>
    <label>Form</label>
</RecordType>