force-app/main/default/objects/FieloCRUD__PageLayout__c/recordTypes/FieloCRUD__Profile.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__Profile</fullName>
    <active>true</active>
    <description>Profile page layout allows to create friendlier member&#39;s profile.</description>
    <label>Profile</label>
</RecordType>