force-app/main/default/objects/FieloCRUD__PageLayout__c/recordTypes/FieloCRUD__Standard.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__Standard</fullName>
    <active>true</active>
    <description>Standard page layouts can be access through list views in order to create, edit or view details of a record.</description>
    <label>Standard</label>
</RecordType>