force-app/main/default/objects/FieloCRUD__PageLayout__c/recordTypes/FieloCRUD__Static.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__Static</fullName>
    <active>true</active>
    <description>Static page layouts are referenced directly from CRUD components and  can be access through list views or redirect menus.</description>
    <label>Static</label>
</RecordType>