force-app/main/default/objects/FieloCRUD__PageLayout__c/validationRules/FieloCRUD__PageLayout_ProfileOnlyForMember.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__PageLayout_ProfileOnlyForMember</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	RecordType.DeveloperName = &#39;Profile&#39;,
	FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c &lt;&gt; &#39;FieloEE__Member__c&#39;
)</errorConditionFormula>
    <errorMessage>Profile record type is only available for object settings related to "FieloEE__Member__c" object.</errorMessage>
</ValidationRule>