force-app/main/default/objects/FieloCRUD__PageLayout__c/validationRules/FieloCRUD__PageLayout_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__PageLayout_Type</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(FieloCRUD__ValueToDefinePageLayout__c))
&amp;&amp;
ISBLANK(FieloCRUD__ObjectSettings__r.FieloCRUD__FieldToDefinePageLayout__c)</errorConditionFormula>
    <errorDisplayField>FieloCRUD__ValueToDefinePageLayout__c</errorDisplayField>
    <errorMessage>Please complete the field "Field To Define Page Layout" in the related "Object Settings" record</errorMessage>
</ValidationRule>