force-app/main/default/objects/FieloCRUD__PageLayout__c/validationRules/FieloCRUD__PageLayout_TypeIsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__PageLayout_TypeIsMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	FieloCRUD__Default__c = FALSE,
	NOT(ISBLANK(FieloCRUD__ObjectSettings__r.FieloCRUD__FieldToDefinePageLayout__c )),
	ISBLANK(FieloCRUD__ValueToDefinePageLayout__c),
	RecordType.DeveloperName = &#39;Standard&#39;
)</errorConditionFormula>
    <errorDisplayField>FieloCRUD__ValueToDefinePageLayout__c</errorDisplayField>
    <errorMessage>You must include type if the object setting has a field that defines layout.</errorMessage>
</ValidationRule>